# mcp-server-xlwings

./: .gitignore  .mcpbignore  CHANGELOG.md  LICENSE  README.md  manifest.json  pnpm-lock.yaml  pyproject.toml  server.json
.github/workflows/: docs.yml  publish-mcp-registry.yml  publish-pypi.yml  publish.yml
docs/: examples.md  index.md
docs/.vitepress/: config.ts
docs/.vitepress/theme/: custom.css
docs/guide/: architecture.md  comparison.md  configuration.md  getting-started.md  performance.md  troubleshooting.md
docs/ko/: changelog.md  examples.md  index.md
docs/ko/guide/: architecture.md  comparison.md  configuration.md  getting-started.md  performance.md  troubleshooting.md
docs/ko/tools/: index.md
docs/tools/: index.md
src/mcp_server_xlwings/: __init__.py  __main__.py  excel.py  server.py
tests/: test_excel.py  test_server.py
