[project]
name = "mcp-server-xlwings"
version = "0.1.0"
description = "MCP server for Excel automation via xlwings COM. Supports DRM-protected files."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "Euiyun"}]
keywords = ["mcp", "excel", "xlwings", "com", "drm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "mcp>=1.0.0",
    "xlwings>=0.30.0",
]

[project.scripts]
mcp-server-xlwings = "mcp_server_xlwings.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_server_xlwings"]
