[project]
name = "mcp-server-xlwings"
version = "0.3.0"
description = "MCP server for Excel automation via xlwings COM. Supports DRM-protected files."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "Euiyun"}]
keywords = ["mcp", "excel", "xlwings", "com", "drm", "automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Topic :: Office/Business :: Financial :: Spreadsheet",
]
dependencies = [
    "mcp>=1.0.0",
    "xlwings>=0.30.0",
]

[project.urls]
Homepage = "https://github.com/geniuskey/mcp-server-xlwings"
Repository = "https://github.com/geniuskey/mcp-server-xlwings"
Issues = "https://github.com/geniuskey/mcp-server-xlwings/issues"
Changelog = "https://github.com/geniuskey/mcp-server-xlwings/blob/main/CHANGELOG.md"

[project.scripts]
mcp-server-xlwings = "mcp_server_xlwings.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_server_xlwings"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
